Draw flying enemies in right positions

--- a/Battles/index.html
+++ b/Battles/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-md-3">
                     <div class="panel panel-info">
                         <div class="panel-heading">
                             <h3 class="panel-title">Player</h3>
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-md-6">
                     <div id="playerTurnPanel" class="panel panel-primary" style="display: none;">
                         <div class="panel-heading">
                             <h3 class="panel-title">Your turn!</h3>
@@ -83,7 +83,7 @@
                             <h3 class="panel-title">Battle</h3>
                         </div>
                         <div id="battleStage" class="panel-body">
-                            <img id="battlePlayer" class="img-rounded pull-left" src="player.png"/>
+                            <img id="battlePlayer" class="pull-left" src="player.png"/>
                             <div id="battleEnemies" class="pull-right"></div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-md-3">
                     <div class="panel panel-danger">
                         <div class="panel-heading">
                             <h3 class="panel-title">Enemies</h3>
