--- a/Battles/index.html
+++ b/Battles/index.html
@@ -119,8 +119,18 @@
                 </div>
             </div>
         </div>
+        <div id="canvasModal" class="modal fade" data-backdrop="static" data-keyboard="false">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body" style="text-align: center;">
+                        <canvas id="canvasModalCanvas" width="558" height="300"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="bootstrap.min.js"></script>
+        <script type="text/javascript" src="jcanvas.min.js"></script>
         <script type="text/javascript" src="classes.js"></script>
         <script type="text/javascript" src="enemies.js"></script>
         <script type="text/javascript" src="main.js"></script>
