Switch to external libraries, reorganize files

--- a/Battles/index.html
+++ b/Battles/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Battles</title>
-        <link rel="stylesheet" type="text/css" href="bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="bootstrap-theme.min.css"/>
-        <link rel="stylesheet" type="text/css" href="main.css"/>
+        <link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="lib/css/bootstrap-theme.min.css"/>
+        <link rel="stylesheet" type="text/css" href="res/css/battles.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
@@ -79,7 +79,7 @@
                             <h3 class="panel-title">Battle</h3>
                         </div>
                         <div id="battleStage" class="panel-body">
-                            <img id="battlePlayer" class="pull-left" src="player.png"/>
+                            <img id="battlePlayer" class="pull-left" src="res/img/player.png"/>
                             <div id="battleEnemies" class="pull-right"></div>
                         </div>
                     </div>
@@ -113,11 +113,11 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="bootstrap.min.js"></script>
-        <script type="text/javascript" src="jcanvas.min.js"></script>
-        <script type="text/javascript" src="classes.js"></script>
-        <script type="text/javascript" src="enemies.js"></script>
-        <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="lib/js/jquery.min.js"></script>
+        <script type="text/javascript" src="lib/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="lib/js/jcanvas.min.js"></script>
+        <script type="text/javascript" src="res/js/classes.js"></script>
+        <script type="text/javascript" src="res/js/enemies.js"></script>
+        <script type="text/javascript" src="res/js/battles.js"></script>
     </body>
 </html>
