--- a/Battles/index.html
+++ b/Battles/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Battles</title>
-        <link rel="stylesheet" type="text/css" href="lib/css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="lib/css/bootstrap-theme.min.css"/>
+        <link rel="stylesheet" type="text/css" href="/.cdn/css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="/.cdn/css/bootstrap-theme.min.css"/>
         <link rel="stylesheet" type="text/css" href="res/css/battles.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -113,9 +113,9 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="lib/js/jquery.min.js"></script>
-        <script type="text/javascript" src="lib/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="lib/js/jcanvas.min.js"></script>
+        <script type="text/javascript" src="/.cdn/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/.cdn/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/.cdn/js/jcanvas.min.js"></script>
         <script type="text/javascript" src="res/js/classes.js"></script>
         <script type="text/javascript" src="res/js/enemies.js"></script>
         <script type="text/javascript" src="res/js/battles.js"></script>
